--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -2,27 +2,10 @@
 <html>
 <head>
 	<title>New Article</title>
-	
+
 </head>
 <body>
 	<h1>Create a new Article</h1>
-	<%= form_for(@article) do |f| %>
-  <ul>
-  <% @article.errors.full_messages.each do |error| %>
-    <li><%= error %></li>
-  <% end %>
-  </ul>
-  <p>
-    <%= f.label :title %><br />
-    <%= f.text_field :title %>
-  </p>
-  <p>
-    <%= f.label :body %><br />
-    <%= f.text_area :body %>
-  </p>
-  <p>
-    <%= f.submit %>
-  </p>
-<% end %>
+	<%= render partial: 'form' %>
 </body>
 </html>
