--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,3 +2,4 @@
 <p><%= @article.body %></p>
 <%= link_to '<< Back to Articles List', articles_path %>
 <%= link_to 'Delete', article_path(@article), method: :delete, data: {confirm: "Would you like to delete this article?" } %>
+<%= link_to 'edit', edit_article_path(@article) %>
